@@ -1,9 +1,11 @@
 /* $Id$ */
 
 #define PASS_MAX_LEN 32
+#define BIND_MAX_LEN 16
 #define PROMPT "sysrq> "
 #define SYSRQ_TRIGGER_PATH "/proc/sysrq-trigger"
 #define AUTH_FILE "/etc/sysrqd.secret"
+#define BINDIP_FILE "/etc/sysrqd.bind"
 #define PID_FILE "/var/run/sysrqd.pid"
 #define SYSRQD_PRIO -19
 #define SYSRQD_LISTEN_PORT 4094
